--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     
     <link rel="stylesheet" href="estilos.css">
     
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav>
-            <img src="hearts.png" alt=""> <h1>Alura-Geek</h1>
+            <img src="hearts.png" alt=""> <h1>Alura-Geek</h1> <img src="hearts.png" alt="">
         </nav>
     </header>
     <section class="contenedor">
@@ -45,8 +45,8 @@
                     <label for="text">Imagen:</label>
                     <input type="text" id="image" name="image" required data-imagen>
                     <div class="botones-form">
-                        <input type="submit" value="Enviar">
-                        <input type="reset" value="Limpiar">
+                        <button type="submit" value="Enviar">Enviar</button>
+                        <button type="reset" id="limpiar" value="Limpiar">Limpiar</button>
                     </div>
                 </form>
             </div>
